--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
     <footer class="footer">
       <div class="footerUpperPart">
         <div class="footer-left">
-          <p>Contact Us</p>
+          <p>Follow Us on our socials:</p>
           <div class="socialIcons">
             
 
